--- a/client/src/pages/Home.css
+++ b/client/src/pages/Home.css
@@ -27,5 +27,39 @@
     width: 100%;
 }
 .form_content {
-    display: inline-grid;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+.form_content table{
+    width: 100%;
+}
+
+.form_content table td:nth-child(1) {
+    text-align: justify;
+    width: 50%;
+    padding-left: 10rem;
+}
+.form_content table td:nth-child(2) {
+    text-align: start;
+    width: 50%;
+}
+
+.form_content table tr{
+    margin-top: 1rem;
+}
+
+.form_content table td input {
+    background: transparent;
+    width: 14rem;
+    height: 2rem;
+    border: none;
+    border-bottom: 1px solid orangered;
+    border-radius: 1px;
+   transition: width 0.3s;
+   
+}
+.form_content table td input:focus-visible{
+    outline: none;
+    width: 16rem;
 }
