--- a/client/src/App.css
+++ b/client/src/App.css
@@ -15,15 +15,14 @@
 }
 
 
-.app-container 
-{
+.app-container {
   flex: 1;
   display: flex;
-  flex-direction: column;
- padding: 1%; 
+  flex-direction: initial;
+  width: 100%;
 }
-.content{
+.content {
   flex: 1;
   overflow: auto;
- 
+  padding: 1rem;
 }
