--- a/client/src/Components/layout/Navbar.css
+++ b/client/src/Components/layout/Navbar.css
@@ -6,6 +6,7 @@
     background-color: #333;
     color: #fff;
     padding: 10px;
+    border-bottom: 2px solid orangered;
   }
   
   .navbar-brand a {
