--- a/client/src/App.css
+++ b/client/src/App.css
@@ -16,7 +16,7 @@
 
 
 .app-container {
-  flex: 1;
+
   display: flex;
   flex-direction: initial;
   width: 100%;
@@ -25,4 +25,5 @@
   flex: 1;
   overflow: auto;
   padding: 1rem;
+  margin-left:  4rem;;
 }
