--- a/client/src/Components/individuals/Data.css
+++ b/client/src/Components/individuals/Data.css
@@ -21,17 +21,50 @@
 }
 .form_header {
     font-size: 1.9rem;
+    margin-bottom: 2rem;
+    background-color: #252424;
+    padding: 1rem 0 1rem 0;
+    box-shadow: 0px 2px 8px #0000005e;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+ img{
+    max-width: 1.4rem;
+    margin-right: 0.3rem;
+}
+.form_header label span{
+    color: orangered;
+    margin-right: 1rem;
+}
+.project {
+    margin-bottom: 1rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1rem;
+}
+.project span{
+    color: orangered;
 }
 .form_content{
     width: 100%;
     display: flex;
     justify-content: space-evenly;
 }
-.form_content div {
-    width: 49%;
+.form_content_header{
+    border: none !important;
+    width: 100% !important;
+    box-shadow: none !important;
+}
+.form_content_header span{
+    color: orangered;
+}
+.form_content div:nth-child(1),.form_content div:nth-child(2) {
+    width: 47%;
     display: grid;
     justify-items: center;
-    background: black;
+    box-shadow: 2px 1px 8px #181818;
     padding: 1rem 0 1rem 0;
     border-top: 2px solid orangered;
     border-radius: 6px;
@@ -53,6 +86,37 @@
     outline: none;
     width: 16rem;
     border-bottom: 1px solid orangered;
+}
+.next {
+    width: 100%;
+    display: flex;
+    justify-content: end;
+    align-items: center;
+}
+
+.next button {
+    background: linear-gradient(to left, transparent 50%, orangered 50%);
+    background-size: 200% 100%;
+    background-position: right bottom;
+    transition: background-position 0.5s ease;
+    width: 100%;
+    height: 2.5rem;
+    border: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: black;
+    align-items: center;
+    cursor: pointer;
+    margin-top: 1rem;
+}
+
+.next button img {
+   max-width: 1rem;
+  
+}
+.next button:hover{
+    background-position: left bottom;
 }
 
 
