--- a/client/src/Components/layout/SideBar.css
+++ b/client/src/Components/layout/SideBar.css
@@ -5,9 +5,12 @@
 }
 .side_bar {
    
-    z-index: 2;
+  
+    flex: 0 0 auto;
     height: 100vh;
+    position: fixed;
     width: 4rem;
+    overflow-y: auto;
     list-style-type: none;
     background-color: orangered;
     overflow: hidden;
