--- a/client/src/Components/individuals/Data.css
+++ b/client/src/Components/individuals/Data.css
@@ -48,72 +48,61 @@
     color: orangered;
 }
 .form_content{
-    width: 100%;
     display: flex;
     justify-content: space-evenly;
 }
-.form_content_header{
-    border: none !important;
-    width: 100% !important;
-    box-shadow: none !important;
-}
-.form_content_header span{
-    color: orangered;
-}
-.form_content div:nth-child(1),.form_content div:nth-child(2) {
-    width: 47%;
-    display: grid;
-    justify-items: center;
-    box-shadow: 2px 1px 8px #181818;
+.div1 , .div2{
+    width: 48%;
+    background-color: #141414;
     padding: 1rem 0 1rem 0;
     border-top: 2px solid orangered;
-    border-radius: 6px;
+    border-radius: 5px;
 }
-.form_content div input{
-    width: 14rem;
-    height: 2.4rem;
+.div1 div:nth-child(1){
+    display: flex;
+    justify-content: space-around;
+}
+.div1 div:nth-child(1) div {
+    display: inline-grid;
+}
+.div2 div{
+    display: grid;
+}
+
+.form_content_header label span{
+    color: orangered;
+}
+ input{
+   
     background: transparent;
     border: none;
-    border-bottom: 1px solid #ff450047;
-    border-radius: 15px;
-    margin: 0.5rem 0 0.5rem 0;
-    box-shadow: -1px -2px 7px #0e0e0e4a;
+    box-shadow: 1px 1px 4px #000000b3;
+    height: 1.9rem;
+    border-radius: 7px;
+    border-bottom: 1px solid #ff450061;
+    margin-bottom: 1rem;
     text-align: center;
-    transition: all .2s ease-in-out;
+    transition: all .3s ease-in-out;
 }
-
-.form_content div input:focus-visible{
+input:focus-visible{
+   
     outline: none;
-    width: 16rem;
     border-bottom: 1px solid orangered;
-}
-.next {
-    width: 100%;
-    display: flex;
-    justify-content: end;
-    align-items: center;
-}
 
-.next button {
+}
+.next button{
     background: linear-gradient(to left, transparent 50%, orangered 50%);
     background-size: 200% 100%;
     background-position: right bottom;
-    transition: background-position 0.5s ease;
+    transition: all 0.5s ease-in-out;
     width: 100%;
     height: 2.5rem;
     border: none;
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: black;
-    align-items: center;
     cursor: pointer;
-    margin-top: 1rem;
-}
-
-.next button img {
-   max-width: 1rem;
-  
+    background-color: black;
 }
 .next button:hover{
     background-position: left bottom;
