--- a/client/src/Components/individuals/Data.css
+++ b/client/src/Components/individuals/Data.css
@@ -50,6 +50,7 @@
 .form_content{
     display: flex;
     justify-content: space-evenly;
+    height: 37rem;
 }
 .div1 , .div2{
     width: 48%;
@@ -64,7 +65,14 @@
 }
 .div1 div:nth-child(1){
     width: 100%;
+    height: 98%;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
   
+}
+.div1 div:nth-child(1) form{
+    width: fit-content;
 }
 .div1 div:nth-child(1) div {
     display: inline-grid;
@@ -99,6 +107,7 @@ input:focus-visible{
 }
 .next{
     width: 100%;
+    height: 2%;
 }
 .next button{
     background: linear-gradient(to left, transparent 50%, orangered 50%);
@@ -116,6 +125,9 @@ input:focus-visible{
 }
 .next button:hover{
     background-position: left bottom;
+}
+.summary .family_{
+    display: flex !important;
 }
 
 
