--- a/client/src/Components/individuals/Data.css
+++ b/client/src/Components/individuals/Data.css
@@ -7,7 +7,8 @@
 
 
 .form_container {
-    width: 100%;
+   
+    width: 102rem;
     background-color: #1e1e1e;
     border: 1px solid #ff45004d;
     border-radius: 10px;
@@ -47,46 +48,29 @@
 .project span{
     color: orangered;
 }
-.form_content{
+
+.div_inputs .inputs_{
+    width: 100%;
     display: flex;
     justify-content: space-evenly;
-    height: 37rem;
-}
-.div1 , .div2{
-    width: 48%;
-    background-color: #141414;
-    padding: 1rem 0 1rem 0;
-    border-top: 2px solid orangered;
-    border-radius: 5px;
-    display: flex;
     align-items: center;
-    flex-direction: column;
-    justify-content: space-between;
-}
-.div1 div:nth-child(1){
-    width: 100%;
-    height: 98%;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-  
-}
-.div1 div:nth-child(1) form{
-    width: fit-content;
-}
-.div1 div:nth-child(1) div {
-    display: inline-grid;
-}
-.div2 div{
-    display: grid;
-}
-
-.form_content_header label span{
-    color: orangered;
 }
 form{
     display: grid;
+    width: 25%;
+    background-color: #232323;
+    padding: 1rem;
+    border-radius: 1rem;
+    box-shadow: 2px 7px 6px #0000007a;
 }
+form label{
+    padding-top: 1rem;
+    margin-bottom: 2rem;
+    border-top: 2px solid orangered;
+    border-radius: 4px;
+}
+
+
  input{
    
     background: transparent;
@@ -107,7 +91,7 @@ input:focus-visible{
 }
 .next{
     width: 100%;
-    height: 2%;
+    margin-top: 3rem;
 }
 .next button{
     background: linear-gradient(to left, transparent 50%, orangered 50%);
@@ -126,9 +110,33 @@ input:focus-visible{
 .next button:hover{
     background-position: left bottom;
 }
-.summary .family_{
-    display: flex !important;
+.summary{
+    width: 100%;
 }
+.summary .family_{
+    display: flex;
+    width: 100%;
+    justify-content: space-evenly;
+    align-items: center;
 
+}
+.inputs_summary{
+    display: grid;
+    width: 20%;
+    background-color: #1a1a1a;
+    padding: 1rem;
+    border-radius: 1rem;
+    border-top: 1px solid orangered;
+}
+.others_{
+    display: flex;
+    width: 100%;
+    justify-content: space-evenly;
+    margin-top: 2rem;
+}
+.others_ div{
+    width: 20%;
+    display: grid;
+}
 
 
