--- a/client/src/Components/layout/SideBar.css
+++ b/client/src/Components/layout/SideBar.css
@@ -17,6 +17,7 @@
     backdrop-filter: blur(6px);
     transition: width 0.5s;
     border-right: 2px solid black;
+    z-index: 2;
     
 }
 .side_bar ul {
