--- a/client/src/pages/Home.css
+++ b/client/src/pages/Home.css
@@ -1,21 +1,29 @@
+.table_container{
+  height: 30rem;
+  overflow: auto;
+}
 table{
     width: 100%;
     border-collapse: collapse;
 }
 thead{
     background-color: black;
+    position: sticky;
+    top: 0;
+    z-index: 1;
 }
 th , td {
     padding: 0.5rem;
     font-size: 0.7rem;
+    text-align: center;
 }
-tr:nth-child(even) {
+tbody tr:nth-child(even) {
     background-color: #333333; 
   }
-  tr{
+  tbody tr{
     transition: all 0.3s ease-in-out;
   }
-  tr:hover{
+  tbody tr:hover{
     transform: scale(1.01);
     cursor: pointer;
     background-color: rgb(24, 24, 24);
