--- a/client/src/Components/individuals/Data.css
+++ b/client/src/Components/individuals/Data.css
@@ -101,13 +101,15 @@ input:focus-visible{
 .next{
     width: 100%;
     margin-top: 3rem;
+    display: flex;
+    justify-content: space-evenly;
 }
 .next button{
     background: linear-gradient(to left, transparent 50%, orangered 50%);
-    background-size: 200% 100%;
+    background-size: 250% 100%;
     background-position: right bottom;
     transition: all 0.5s ease-in-out;
-    width: 100%;
+    width: 40%;
     height: 2.5rem;
     border: none;
     display: flex;
