--- a/client/src/pages/Home.css
+++ b/client/src/pages/Home.css
@@ -3,15 +3,27 @@ table{
     width: 100%;
     border-collapse: collapse;
 }
-thead{
-    background-color: black;
+.table_container{
+  height: 100rem;
+}
+thead {
+  position: sticky;
+  top: 0;
+}
+thead tr:nth-child(1){
+    background-color: rgb(30, 44, 122);
     position: sticky;
     top: 0;
     z-index: 1;
 }
+thead tr:nth-child(2){
+  background-color: rgb(137, 148, 211);
+  position: sticky;
+  top: 0;
+  z-index: 1;
+}
 tr .container{
-  background-color: rgb(56, 56, 56);
-  border-top: 1px solid black;
+  background-color: grey;
 }
 th , td {
     padding: 0.5rem;
@@ -20,8 +32,12 @@ th , td {
 }
 tr td input{
   text-align: center;
+  width: 2rem;
+  border: none;
 }
-
+::-webkit-input-placeholder {
+  color: #ffffff; 
+}
   tbody tr{
     transition: all 0.3s ease-in-out;
   }
