--- a/client/src/pages/Home.css
+++ b/client/src/pages/Home.css
@@ -4,7 +4,8 @@ table{
     border-collapse: collapse;
 }
 .table_container{
-  height: 100rem;
+  height: 42rem;
+  overflow: auto;
 }
 thead {
   position: sticky;
@@ -14,10 +15,18 @@ thead tr:nth-child(1){
     background-color: rgb(30, 44, 122);
     position: sticky;
     top: 0;
+    left: 0;
+    right: 0;
     z-index: 1;
 }
 thead tr:nth-child(2){
-  background-color: rgb(137, 148, 211);
+  background-color: rgb(122, 122, 122);
+  position: sticky;
+  top: 0;
+  z-index: 1;
+}
+thead tr:nth-child(3){
+  background-color: rgb(97, 109, 180);
   position: sticky;
   top: 0;
   z-index: 1;
@@ -42,7 +51,7 @@ tr td input{
     transition: all 0.3s ease-in-out;
   }
   tbody tr:hover{
-    transform: scale(1.01);
+   
     cursor: pointer;
     background-color: rgb(24, 24, 24);
   } 
