--- a/client/src/pages/Home.css
+++ b/client/src/pages/Home.css
@@ -78,3 +78,28 @@ tr td input{
     background-color: #333333;
     border-top: 1px solid rgb(255, 68, 0);
   }
+
+/*   .round-loader {
+  
+    width: 1rem;  
+    height: 1rem; 
+    border-radius: 50%;   
+    animation: rotate 1.5s linear infinite;  
+    background: conic-gradient(
+      from 0deg at 50% 50%, 
+      rgba(168, 29, 29, 0) 0%, 
+      rgb(209, 52, 4) 50%, 
+      rgba(145, 96, 96, 0.692) 100%
+    );
+  }
+  
+  @keyframes rotate {
+    from {
+      transform: rotate(0deg);
+    }
+    to {
+      transform: rotate(360deg);
+    }
+  }
+   */
+  
