--- a/client/src/pages/Home.css
+++ b/client/src/pages/Home.css
@@ -1,18 +1,27 @@
 
+.table_container{
+  height: 77vh;
+  overflow: auto;
+}
 table{
     width: 100%;
     border-collapse: collapse;
 }
-.table_container{
-  height: 42rem;
-  overflow: auto;
-}
+
 thead {
   position: sticky;
   top: 0;
+  z-index: 1;
 }
-thead tr:nth-child(1){
-    background-color: rgb(30, 44, 122);
+tr td:nth-child(1){
+  background-color:  #006B63;
+  position: sticky;
+  top: 0;
+  left: 0;
+}
+thead tr{
+    background-color: #4E7C88;
+   
     position: sticky;
     top: 0;
     left: 0;
@@ -63,7 +72,7 @@ tr td input{
     
   }
   .projects label{
-    width: 20%;
+    width: 15%;
     display: flex;
     align-items: center;
     padding: 1rem;
