--- a/client/src/pages/Main.css
+++ b/client/src/pages/Main.css
@@ -66,3 +66,26 @@
   font-size: 1.5rem;
   font-weight: 600;
 }
+
+@keyframes fadeUp {
+  0%{
+    opacity: 0;
+    transform: translateY(40px);
+  }
+  100%{
+    opacity: 1;
+    transform:translateY(0);
+  }
+}
+.fade-up:nth-child(1){
+  animation: fadeUp 0.3s ease-in-out;
+}
+.fade-up:nth-child(2){
+  animation: fadeUp 0.8s ease-in-out;
+}
+.fade-up:nth-child(3){
+  animation: fadeUp 1s ease-in-out;
+}
+.fade-up:nth-child(4){
+  animation: fadeUp 1.3s ease-in-out;
+}
