--- a/client/src/pages/Home.css
+++ b/client/src/pages/Home.css
@@ -14,14 +14,14 @@ thead {
   z-index: 1;
 }
 tr td:nth-child(1){
-  background-color:  #006B63;
+  background-color: #006b6342;
   position: sticky;
   top: 0;
   left: 0;
+  backdrop-filter: blur(10px);
 }
 thead tr{
     background-color: #4E7C88;
-   
     position: sticky;
     top: 0;
     left: 0;
