--- a/client/src/Components/FinalAssembl/FinalAssembly.module.css
+++ b/client/src/Components/FinalAssembl/FinalAssembly.module.css
@@ -1,11 +1,12 @@
 .projects{
+  margin: 2rem 0 2rem 0;
     width: 100%;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
 }
 .projects label{
-    width: 20%;
+    width: 17%;
     background-color: rgb(56 56 56);
     padding: 0.8rem;
     text-align: center;
@@ -20,23 +21,23 @@
     box-shadow: 2px 1px 4px #1a1a1a;
     border-radius: 4px;
 }
-table{
+.table table{
     width: 100%;
     border-collapse: collapse;
 }
 
-thead {
+.table table thead {
   position: sticky;
   top: 0;
   z-index: 1;
 }
-tr td:nth-child(1){
+.table table tr td:nth-child(1){
   background-color: #006b6342;
   position: sticky;
   top: 0;
   left: 0;
 }
-thead tr{
+.table table thead tr{
     background-color: #4E7C88;
     position: sticky;
     top: 0;
@@ -44,30 +45,33 @@ thead tr{
     right: 0;
     z-index: 1;
 }
-thead tr:nth-child(2){
+.table table thead tr:nth-child(2){
   background-color: rgb(122, 122, 122);
   position: sticky;
   top: 0;
   z-index: 1;
 }
-thead tr:nth-child(3){
+.table table thead tr:nth-child(3){
   background-color: rgb(97, 109, 180);
   position: sticky;
   top: 0;
   z-index: 1;
 }
-tr .container{
+.table table tr .container{
   background-color: grey;
 }
-th , td {
+.table table th , td {
     padding: 0.5rem;
     font-size: 0.7rem;
     text-align: center;
 }
-tr td input{
+.table table tr td input{
   text-align: center;
   width: 2rem;
   border: none;
+}
+.table table input::placeholder{
+  color: white;
 }
 .total {
   background-color: orangered;
