--- a/client/src/Components/FinalAssembl/FinalAssembly.module.css
+++ b/client/src/Components/FinalAssembl/FinalAssembly.module.css
@@ -13,6 +13,15 @@
   border-radius: 0.6em;
   border-top: 2px solid orangered;
   cursor: pointer;
+  transition: all 0.3s ease-in-out;
+}
+.projects label:hover {
+  background-color: #0e3137;
+  transform: scale(1.04);
+}
+.active_label {
+  background-color: #0e3137 !important;
+  transform: scale(1.04);
 }
 .table {
   margin-top: 1rem;
@@ -79,6 +88,14 @@ td {
   font-size: 0.7rem;
   text-align: center;
 }
+.table table tbody tr {
+  transition: 0.3s ease-in-out;
+  border-bottom: 1px solid rgba(77, 77, 77, 0.329);
+}
+.table table tbody tr:hover {
+  background-color: rgb(51, 51, 51);
+}
+
 .table table tr td input {
   text-align: center;
   width: 2rem;
@@ -105,4 +122,10 @@ td {
 }
 ::-webkit-scrollbar-thumb:hover {
   background: #555;
+}
+.loading {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
