--- a/client/src/Components/ui/UI.module.css
+++ b/client/src/Components/ui/UI.module.css
@@ -1,11 +1,52 @@
-.Loading{
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+
+
+.lds_ripple,
+.lds_ripple div {
+  box-sizing: border-box;
 }
-.Loading p {
-    font-size: 3rem;
-    color: rgb(192, 59, 59);
+.lds_ripple {
+ position: relative;
+ display: flex;
+ justify-content: center;
+ align-items: center;
+}
+.lds_ripple div {
+ position: absolute;
+  border: 4px solid currentColor;
+  opacity: 1;
+  border-radius: 50%;
+  animation: lds-ripple 1s cubic-bezier(0, 0.2, 0.8, 1) infinite;
+}
+.lds_ripple div:nth-child(2) {
+  animation-delay: -0.5s;
+}
+@keyframes lds-ripple {
+  0% {
+    top: 36px;
+    left: 36px;
+    width: 8px;
+    height: 8px;
+    opacity: 0;
+  }
+  4.9% {
+    top: 36px;
+    left: 36px;
+    width: 8px;
+    height: 8px;
+    opacity: 0;
+  }
+  5% {
+    top: 36px;
+    left: 36px;
+    width: 8px;
+    height: 8px;
+    opacity: 1;
+  }
+  100% {
+    top: 0;
+    left: 0;
+    width: 80px;
+    height: 80px;
+    opacity: 0;
+  }
 }
