--- a/client/src/Components/FinalAssembl/FinalAssembly.module.css
+++ b/client/src/Components/FinalAssembl/FinalAssembly.module.css
@@ -37,7 +37,7 @@
 }
 .table {
   margin-top: 1rem;
-  max-height: 85vh;
+  max-height: 50rem;
   overflow: auto;
   box-shadow: 2px 1px 4px #1a1a1a;
   border-radius: 4px;
