--- a/client/src/Components/ui/UI.module.css
+++ b/client/src/Components/ui/UI.module.css
@@ -50,6 +50,7 @@
 }
 .legend {
   width: 100%;
+  margin: 2rem 0;
   
 }
 
@@ -63,4 +64,32 @@
   display: flex;
   align-items: center;
   padding: 6px;
+}
+.title{
+  align-items: center;
+  display: flex;
+  gap: 1.4rem;
+  width: 100%;
+  margin: 1rem 0;
+}
+.title h3 {
+   color: #f0f8ff;
+    margin: 0;
+    text-transform: uppercase;
+}
+.title div{
+    background-color: #fff;
+    height: 3px;
+    position: relative;
+    width: 10%;
+}
+.title div::after{
+  border: 4px solid #f84018;
+    border-radius: 50%;
+    content: "";
+    height: 1rem;
+    position: absolute;
+    right: -20px;
+    top: -7px;
+    width: 1rem;
 }
